--- a/TeachStar.Net.Diagnosis.Common/TeachStar.Net.Diagnosis.Common.csproj
+++ b/TeachStar.Net.Diagnosis.Common/TeachStar.Net.Diagnosis.Common.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
+    <OutputPath>..\publish\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
+    <OutputPath>..\publish\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -42,6 +42,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Net\DiagnosisResult.cs" />
+    <Compile Include="Net\SocketEventArgs.cs" />
+    <Compile Include="Net\SocketListener.cs" />
     <Compile Include="Net\SocketPort.cs" />
     <Compile Include="Net\ICMPNode.cs" />
     <Compile Include="Net\LocalNetDevice.cs" />
